tests/baselines/reference/allowSyntheticDefaultImports8(strict=true).errors.txt
a.ts(1,10): error TS2305: Module '"./b"' has no exported member 'default'.
b.d.ts(1,17): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
b.d.ts(3,17): error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.


==== b.d.ts (2 errors) ====
    export function foo();
                    ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    
    export function bar();
                    ~~~
!!! error TS7010: 'bar', which lacks return-type annotation, implicitly has an 'any' return type.
    
==== a.ts (1 errors) ====
    import { default as Foo } from "./b";
             ~~~~~~~
!!! error TS2305: Module '"./b"' has no exported member 'default'.
    Foo.bar();
    Foo.foo();